modif fin aprem
10/05/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="histvide">Historique Vide</string>
     <string name="activitymap">Activité Map</string>
     <string name="textacceptPerm">Pour vous localiser merci d\'accepter le parametre précedant</string>
+    <string name="login">login</string>
+    <string name="reset">reset</string>
+    <string name="connexion">connexion</string>
 
 
 </resources>
