page Inscription + debut Liste client 11/05/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="login">login</string>
     <string name="reset">reset</string>
     <string name="connexion">connexion</string>
+    <string name="inscription">inscription</string>
 
 
 </resources>
