Aprem max martin 11/05/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="reset">reset</string>
     <string name="connexion">connexion</string>
     <string name="inscription">inscription</string>
+    <string name="getData">getdata</string>
 
 
 </resources>
