suppression Angers.data 11/05/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="connexion">connexion</string>
     <string name="inscription">inscription</string>
     <string name="getData">getdata</string>
+    <string name="apicaca">apicaca</string>
 
 
 </resources>
