Modif Martin correection bug + descriptionActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="supprimer" translatable="false">supprimer</string>
     <string name="modifierMdp" translatable="false">modifier Mdp</string>
     <string name="Photo" translatable="false">photo</string>
+    <string name="Description">Description</string>
 
 
 </resources>
